syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.example.grpc.protodefine";

package com.example.grpc.protodefine;

service HelloWorld {


}

message CommonRequest {
  	string name = 1;
	string fileName = 2;

}

message CommonResponse {
	string message = 1;
	string fileName = 2;

}

