syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.example.grpc.protodefine";

package com.example.grpc.protodefine;

service Greeter {


  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  
  
  
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}